Uh...I forget.  Added some file-adding functions?