@@ -5,10 +5,13 @@
  */
 package com.erhannis.lancache;
 
+import com.erhannis.lancache.metadata.CFile;
 import com.erhannis.mathnstuff.utils.Timing;
 import java.io.File;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.stream.Collectors;
 
 /**
  *
@@ -30,8 +33,22 @@ public class Main {
         }
 
         try {
-            LANCacheFS stub = new LANCacheFS(Paths.get(args[1]));
-            stub.mount(Paths.get(args[0]), true, false, new String[]{});
+            FileMapper fm = new FileMapper(Paths.get(args[1]));
+            
+            {
+                Path cachedir = Path.of("G:\\lancache_data\\cache");
+                // Clear cache
+                for (Path f : Files.list(cachedir).collect(Collectors.toList())) {
+                    Files.delete(f);
+                }
+                
+                fm.addExternalFile(Path.of("D:\\Downloads\\1679415240.vetkar_anyu34_0.png"), "/test.png");
+                fm.addEmptyDirectory("/", "subdir");
+                fm.addExternalFile(Path.of("D:\\Downloads\\1679415240.vetkar_anyu34_0.png"), "/subdir/test.png");
+            }
+            
+            LANCacheFS lc = new LANCacheFS(fm);
+            lc.mount(Paths.get(args[0]), true, true, new String[]{});
         } catch (Exception e) {
             e.printStackTrace();
         }
